--- a/index.html
+++ b/index.html
@@ -84,6 +84,32 @@
 
           <div class="experience__box">
             <div class="experience__text">
+                <h3>Retail Consultant</h3>
+                <p>Oct 2023 - Current, Telstra Store Emporium - Melbourne, Australia</p>
+                <ul class="experience__list">
+                    <li>Assisted more than two hundred customers with prompt and polite support in person and via telephone.</li>
+                    <li>Offered technical support and troubleshooting issues to enhance customer experience.</li>
+                    <li>Developed strong rapport with customers and created a positive impression of the business.</li>
+                    <li>Helped more than one hundred personal customers and more than twenty business customers to solve SIM card problems and internet problems</li>
+                    <li>Listened to customer needs and desires to identify and recommend optimal products.</li>
+                </ul>
+
+              <!-- <div class="experience__links">
+                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
+                  Visit Site <span>&rarr;</span>
+                </a>
+                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
+                  <img src="./images/github.svg" class="experience__code" alt="GitHub">
+                </a>
+              </div> -->
+            </div>
+            <!-- <div class="experience__image-box">
+              <img src="./images/project-1.png" class="experience__image" alt="Project 1" />
+            </div> -->
+         </div>
+
+         <div class="experience__box">
+            <div class="experience__text">
                 <h3>Software Developer Internship</h3>
                 <p>Nov 2022 - Feb 2023, Vmor Technology - Sydney, Australia</p>
                 <ul class="experience__list">
@@ -106,7 +132,7 @@
             <!-- <div class="experience__image-box">
               <img src="./images/project-1.png" class="experience__image" alt="Project 1" />
             </div> -->
-          </div>
+         </div>
 
           <div class="experience__box">
             <div class="experience__text">
