--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
           <div class="experience__box">
             <div class="experience__text">
-                <h3>Retail Consultant</h3>
+                <h3>Information Technology Sales Consultant</h3>
                 <p>Oct 2023 - Current, Telstra Store Emporium - Melbourne, Australia</p>
                 <ul class="experience__list">
                     <li>Assisted more than two hundred customers with prompt and polite support in person and via telephone.</li>
